[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "requests_factory"
description = "Método Factory para geração de sessão do módulo Requests"
authors = [
    {name = "Eduardo Simoes", email = "eisimoes@yahoo.com"},
]
dependencies = [
    "requests[socks] >= 2.32.3",
]
requires-python = ">= 3.8"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "requests_factory.__version__"}

[tool.black]
line-length = 100
skip-string-normalization = 1

[tool.isort]
profile = "black"

[tool.pylint]
disable = ["broad-exception-raised", "too-many-arguments"]